--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
     <section class="card">
       <h2 class="section-title">Contato</h2>
-      <p>E-mail profissional: <strong>cassia.rosa@example.com</strong></p>
-      <p>GitHub: <a href="#" style="color:#ED6F00">github.com/cassiarosa</a></p>
+      <p>E-mail profissional: <strong>cassiarosa@protonmail.com</strong></p>
+      <p>GitHub: <a href="#" style="color:#ED6F00">github.com/cassiasilvaR</a></p>
     </section>
   </div>
 
