--- a/index.html
+++ b/index.html
@@ -61,17 +61,18 @@
 
   <div class="container">
     <section class="card">
-      <h2 class="section-title">Sobre Cássia</h2>
-      <p>Cássia Rosa é uma pesquisadora natural de Belém do Pará, apaixonada por tecnologia, gatos e capoeira. Seu trabalho acadêmico gira em torno de Processamento de Linguagem Natural (PLN), com foco em detecção automática de discurso de ódio e estudos sobre racismo algorítmico.</p>
+      <h2 class="section-title">Sobre mim</h2>
+      <p>Cientista da Computação (UFMS) e mestra em Ciência da Computação (UFMS). Pesquisa processamento de linguagem natural (PLN) aplicado para detecção de discurso de ódio e discriminação algorítmica. Participa do grupo Brasileiras em PLN e é membra pesquisadora do Centro de Pesquisa e Ativismo de Rondônia sobre Tecnologia, Estado e Sociobiodiversidade (C-PARTES). Atualmente, trabalha como Analista II - Apoio Acadêmico e Tecnológico no Instituto Tecgraf - PUC Rio.</p>
     </section>
 
     <section class="card">
       <h2 class="section-title">Linhas de Pesquisa</h2>
       <ul>
-        <li>Detecção de discurso de ódio em redes sociais</li>
-        <li>Racismo algorítmico e auditorias de modelos de IA</li>
-        <li>Modelos de linguagem e representatividade</li>
+        <li>Detecção de discurso de ódio online</li>
+        <li>Racismo algorítmico</li>
+        <li>Processamento de linguagem natural (PLN)</li>
         <li>Ética e inteligência artificial</li>
+        <li>Ciência de dados</li>
       </ul>
     </section>
 
